@@ -21,7 +21,7 @@
     <groupId>com.hotels.beans</groupId>
     <artifactId>bean-utils-library-parent</artifactId>
     <url>https://github.com/HotelsDotCom/bull</url>
-    <version>1.7.7-SNAPSHOT</version>
+    <version>2.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <inceptionYear>2019</inceptionYear>
     <description>
@@ -46,20 +46,16 @@
     </modules>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <jdk.version>11</jdk.version>
+        <jdk.version>15</jdk.version>
         <maven.compiler.source>${jdk.version}</maven.compiler.source>
         <maven.compiler.target>${jdk.version}</maven.compiler.target>
         <lombok.version>1.18.20</lombok.version>
         <apache.commons-lang3.version>3.12.0</apache.commons-lang3.version>
-        <hotels.oss.plugin.config.version>1.3.0</hotels.oss.plugin.config.version>
         <!-- testing dependencies -->
         <mockito-core.version>3.11.1</mockito-core.version>
         <testng.version>7.4.0</testng.version>
         <assertj-core.version>3.20.1</assertj-core.version>
         <!-- validation dependencies -->
-        <validation-api.version>2.0.1.Final</validation-api.version>
         <hibernate-validator.version>7.0.1.Final</hibernate-validator.version>
         <slf4j-api.version>1.7.30</slf4j-api.version>
         <glassfish.jakarta.el.version>4.0.1</glassfish.jakarta.el.version>
@@ -71,7 +67,8 @@
         <jacoco.branchRatio>0.89</jacoco.branchRatio>
         <jacoco.complexityRatio>0.91</jacoco.complexityRatio>
         <jacoco.lineRatio>0.98</jacoco.lineRatio>
-        <sonar.coverage.exclusions>**/AbstractTransformer.*,**/model/*,**/constant/*,**/error/*,**/annotation/*</sonar.coverage.exclusions>
+        <sonar.coverage.exclusions>**/AbstractTransformer.*,**/model/*,**/constant/*,**/error/*,**/annotation/*
+        </sonar.coverage.exclusions>
         <!-- Required for coverall jdk >= 9 compatibility -->
         <jaxb-api.version>2.3.1</jaxb-api.version>
         <!-- site properties -->
@@ -81,13 +78,22 @@
         <maven.site.plugin.version>3.9.1</maven.site.plugin.version>
         <!-- build settings -->
         <maven.gpg.plugin.version>3.0.1</maven.gpg.plugin.version>
+        <maven.javadoc-plugin.version>3.3.0</maven.javadoc-plugin.version>
         <maven.checkstyle.plugin.version>3.1.2</maven.checkstyle.plugin.version>
+        <puppycrawl.checkstyle.version>8.42</puppycrawl.checkstyle.version>
+        <maven.spotless.plugin.version>2.12.1</maven.spotless.plugin.version>
         <checkstyle.check.skip>false</checkstyle.check.skip>
+        <!-- excludes the Record classes from being analyzed as they are not yet supported by the checkstyle plugin -->
+        <checkstyle.exclusion>
+            **/*Record*.java,
+            **/ItemType.java
+        </checkstyle.exclusion>
         <checkstyle.includeTestSourceDirectory>true</checkstyle.includeTestSourceDirectory>
         <test.coverage.check.skip>false</test.coverage.check.skip>
         <pmd.check.skip>true</pmd.check.skip>
         <javadoc.skip>false</javadoc.skip>
-        <import.order>\#java,\#javax,\#jakarta,\#org,\#,\#com,,\#lombok,java,javax,jakarta,org,,com,,lombok</import.order>
+        <import.order>\#java,\#javax,\#jakarta,\#org,\#,\#com,,\#lombok,java,javax,jakarta,org,,com,,lombok
+        </import.order>
         <spotless.plugin.skip>false</spotless.plugin.skip>
     </properties>
 
@@ -247,6 +253,7 @@
                             <excludes>
                                 <exclude>**/PerformanceTest.java</exclude>
                             </excludes>
+                            <argLine>@{argLine} --enable-preview</argLine>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -291,6 +298,7 @@
                         <configuration>
                             <excludes>
                                 <exclude>**/PerformanceTest.java</exclude>
+                                <argLine>@{argLine} --enable-preview</argLine>
                             </excludes>
                         </configuration>
                     </plugin>
@@ -344,6 +352,7 @@
                         <target>${maven.compiler.target}</target>
                         <parameters>true</parameters>
                         <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                        <compilerArgs>--enable-preview</compilerArgs>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -377,6 +386,13 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-checkstyle-plugin</artifactId>
                     <version>${maven.checkstyle.plugin.version}</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>com.puppycrawl.tools</groupId>
+                            <artifactId>checkstyle</artifactId>
+                            <version>${puppycrawl.checkstyle.version}</version>
+                        </dependency>
+                    </dependencies>
                     <executions>
                         <execution>
                             <phase>process-sources</phase>
@@ -390,7 +406,9 @@
                                 <consoleOutput>true</consoleOutput>
                                 <failsOnError>true</failsOnError>
                                 <skip>${checkstyle.check.skip}</skip>
-                                <includeTestSourceDirectory>${checkstyle.includeTestSourceDirectory}</includeTestSourceDirectory>
+                                <includeTestSourceDirectory>${checkstyle.includeTestSourceDirectory}
+                                </includeTestSourceDirectory>
+                                <excludes>${checkstyle.exclusion}</excludes>
                             </configuration>
                         </execution>
                     </executions>
@@ -401,6 +419,7 @@
                     <version>${maven.surefire.plugin.version}</version>
                     <configuration>
                         <parallelMavenExecution>false</parallelMavenExecution>
+                        <argLine>@{argLine} --enable-preview</argLine>
                     </configuration>
                 </plugin>
                 <!-- jacoco plugin configuration -->
@@ -492,7 +511,8 @@
                     <configuration>
                         <skip>${test.coverage.check.skip}</skip>
                         <jacocoReports>
-                            <jacocoReport>${project.basedir}/bull-report/target/site/jacoco-aggregate/jacoco.xml</jacocoReport>
+                            <jacocoReport>${project.basedir}/bull-report/target/site/jacoco-aggregate/jacoco.xml
+                            </jacocoReport>
                         </jacocoReports>
                     </configuration>
                     <dependencies>
@@ -647,8 +667,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <version>${maven.javadoc-plugin.version}</version>
                 <configuration>
                     <skip>${javadoc.skip}</skip>
+                    <additionalOptions>--enable-preview</additionalOptions>
+                    <release>${jdk.version}</release>
                 </configuration>
                 <executions>
                     <execution>
@@ -668,7 +691,7 @@
             <plugin>
                 <groupId>com.diffplug.spotless</groupId>
                 <artifactId>spotless-maven-plugin</artifactId>
-                <version>${spotless.maven.plugin.version}</version>
+                <version>${maven.spotless.plugin.version}</version>
                 <executions>
                     <execution>
                         <phase>process-sources</phase>
@@ -697,12 +720,28 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
                     <show>public</show>
+                    <additionalOptions>--enable-preview</additionalOptions>
+                    <release>${jdk.version}</release>
                 </configuration>
                 <reportSets>
                     <reportSet>
                         <id>aggregate</id>
                         <reports>
                             <report>aggregate</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <configuration>
+                    <skip>${checkstyle.check.skip}</skip>
+                </configuration>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>checkstyle</report>
                         </reports>
                     </reportSet>
                 </reportSets>
